--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    max-width: 800px;
+    max-width: 50vw;
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 80vh;
+    height: 85vh;
 }
 
 #enemy-area, #player-area {
@@ -39,7 +39,7 @@ body {
 }
 
 .enemy-container {
-    border: 1px solid #ccc;
+    border: 2px solid #de1f1f;
     padding: 10px;
     margin: 5px;
     border-radius: 5px;
@@ -62,19 +62,31 @@ body {
 }
 
 #battle-log {
-    height: 150px;
+    display: flex;
+    flex-direction: column;
+    min-height: 10em;
+    height: 40%;
     overflow-y: scroll;
-    border: 1px solid #ccc;
+    border: 4px solid #ffffff;
     padding: 10px;
     margin: 10px 0;
     font-size: 14px;
 }
 
 #player-stats {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     background-color: transparent;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 15px;
+    border-radius: 10px;
     margin-bottom: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
+}
+
+#player-stats strong {
+    color: #fc9300;
+    font-size: 1.2em;
 }
 
 #actions {
